docs/_specification/1.3/.references.md
---
title: References
---


# References
<!--  Below are reference links not rendered in HTML, see
https://kramdown.gettalong.org/syntax.html#reference-links

Be aware that this file is used by RO-Crate 1.1 and later
versions of the specification, 
DO NOT DELETE entries and 
DO NOT change VERSIONED links.

This file is included by the others using this
%include line (excluding comment/endcomment)
and is also rendered into the end of the PDF.

{% comment %}
  {% include references.liquid %}
{% endcomment %}

-->

* \[BagIt\]: <https://en.wikipedia.org/wiki/BagIt>
* \[BagIt profile\]: <https://bagit-profiles.github.io/bagit-profiles-specification>
* \[BIBO\]: <http://purl.org/ontology/bibo/interviewee>
* \[CodeMeta\]: <https://w3id.org/codemeta>
* \[conformsTo\]: <http://purl.org/dc/terms/conformsTo>
* \[CURIE\]: <https://www.w3.org/TR/curie/>
* \[DataCite\]: <https://www.datacite.org/>
* \[DataCite Schema\]: <https://schema.datacite.org/>
* \[DataCite Schema v4.0\]: <https://schema.datacite.org/meta/kernel-4.0/metadata.xsd>
* \[DCAT\]: <https://www.w3.org/TR/vocab-dcat/>
* \[ELN\]: <https://the.elnconsortium.org/>
* \[Exif\]: <https://en.wikipedia.org/wiki/Exif>
* \[Flattened Document Form\]: <https://json-ld.org/spec/latest/json-ld/#flattened-document-form>
* \[FRAPO\]: <http://www.sparontologies.net/ontologies/frapo>
* \[geonames\]: <https://www.geonames.org/>
* \[git\]: <https://git-scm.com/>
* \[hasFile\]: <http://pcdm.org/models#hasFile>
* \[hasMember\]: <http://pcdm.org/models#hasMember>
* \[isOutputOf\]: <http://purl.org/cerif/frapo/2017-09-04#d4e526>
* \[JSON\]: <http://json.org/>
* \[JSON-LD\]: <https://json-ld.org/>
* \[linked data\]: <https://en.wikipedia.org/wiki/Linked_data>
* \[OCFL\]: <https://ocfl.io/>
* \[OCFL Object\]: <https://ocfl.io/1.0/spec/#object-spec>
* \[ORCID\]: <https://orcid.org>
* \[Pairtree\]: <https://confluence.ucop.edu/display/Curation/PairTree>
* \[Pairtree specification\]: <https://confluence.ucop.edu/display/Curation/PairTree?preview=/14254128/16973838/PairtreeSpec.pdf>
* \[PCDM\]: <https://github.com/duraspace/pcdm/wiki>
* \[Pronom\]: <https://www.nationalarchives.gov.uk/PRONOM/Default.aspx>
* \[Profile\]: <https://www.w3.org/TR/dx-prof/#Class:Profile>
* \[RepositoryCollection\]: <http://pcdm.org/models#Collection>
* \[RepositoryObject\]: <http://pcdm.org/models#Object>
* \[ResearchObject\]: <https://www.researchobject.org/>
* \[Schema.org\]: <http://schema.org>
* \[WorkflowSketch\]: <http://wf4ever.github.io/ro/2016-01-28/roterms/#Sketch>
* \[semver\]: <https://semver.org/spec/v2.0.0.html>
* \[Describo JSON profile\]: <https://github.com/UTS-eResearch/describo/wiki/dsp-index>

* \[Omeka\]: <https://omeka.org>
* \[Linked Data principles\]: <https://5stardata.info/en/>
* \[open standards from W3C\]: <https://www.w3.org/standards/>
* \[CC-BY\]: <https://creativecommons.org/licenses/by/4.0/>
* \[GPL 3.0\]: <https://www.gnu.org/licenses/gpl-3.0>
* \[CC0\]: <https://creativecommons.org/publicdomain/zero/1.0/>
* \[Exif\]: <https://en.wikipedia.org/wiki/Exif>
* \[HTML 5\]: <https://www.w3.org/TR/html52/>
* \[W3C RDF 1.1 formats\]: <https://www.w3.org/TR/rdf11-primer/>
* \[Research Organization Registry URIs\]: <https://ror.org/>
* \[Google Dataset Search\]: <https://developers.google.com/search/docs/data-types/dataset>
* \[JSON-LD 1.0\]: <https://www.w3.org/TR/2014/REC-json-ld-20140116/>
* \[flattened\]: <https://www.w3.org/TR/json-ld/#flattened-document-form>
* \[compacted\]: <https://www.w3.org/TR/json-ld/#compacted-document-form>
* \[FORCE11 Data Citation Principles\]: <https://doi.org/10.25490/a97f-egyk>
* \[RFC3986 section 3.3\]: <https://tools.ietf.org/html/rfc3986#section-3.3>
* \[JSON-LD context\]: <https://www.w3.org/TR/json-ld/#the-context>
* \[BagIt UUID identifiers\]: <https://tools.ietf.org/html/draft-soilandreyes-arcp-03#appendix-A.4>
* \[domainIncludes\]: <http://schema.org/domainIncludes>
* \[rangeIncludes\]: <http://schema.org/rangeIncludes>
* \[Schema.org schema\]: <http://schema.org/version/latest/schemaorg-current-http.jsonld>
* \[rdfs:subClassOf\]: <https://www.w3.org/TR/rdf-schema/#ch_subclassof>
* \[rdfs:subPropertyOf\]: <https://www.w3.org/TR/rdf-schema/#ch_subpropertyof>
* \[JSON-LD tooling\]: <https://json-ld.org/#developers>
* \[JSON-LD flattening\]: <https://www.w3.org/TR/json-ld-api/#flattening-algorithm>
* \[JSON-LD Expansion\]: <https://www.w3.org/TR/json-ld-api/#expansion>
* \[JSON-LD base URI\]: <https://www.w3.org/TR/json-ld11/#base-iri>
* \[JSON-LD expanded form\]: <https://www.w3.org/TR/json-ld11/#expanded-document-form>
* \[RFC3986 base URI\]: <http://tools.ietf.org/html/rfc3986#section-5.1>
* \[SPARQL\]: <https://www.w3.org/TR/sparql11-query/>
* \[RDF triples\]: <https://www.w3.org/TR/rdf11-concepts/>
* \[Apache Jena\]: <https://jena.apache.org/>
* \[Fuseki\]: <https://jena.apache.org/documentation/fuseki2/>
* \[RDF 1.1 note on IRIs\]: <https://www.w3.org/TR/rdf11-concepts/#note-iris>
* \[ARCP\]: <https://datatracker.ietf.org/doc/id/draft-soilandreyes-arcp-03>
* \[ARCP BagIt\]: <https://tools.ietf.org/html/draft-soilandreyes-arcp-03#appendix-A.4>
* \[media type\]: <https://www.iana.org/assignments/media-types>
* \[JSON-LD media type\]: <https://www.w3.org/TR/json-ld/#application-ld-json>
* \[RFC7231 response\]: <https://tools.ietf.org/html/rfc7231#section-3.1.1.5>
* \[BIBO ontology\]: <http://neologism.ecs.soton.ac.uk/bibo.html>
* \[ro-terms\]: <https://github.com/ResearchObject/ro-terms>
* \[function parameter definitions\]: <https://en.wikipedia.org/wiki/Parameter_(computer_programming)>
* \[Best Practice Recipes for Publishing RDF Vocabularies\]: <https://www.w3.org/TR/swbp-vocab-pub/>
* \[HTTP Content-negotiation\]: <https://httpd.apache.org/docs/2.4/content-negotiation.html>
* \[Science On Schema.org guides\]: <https://github.com/ESIPFed/science-on-schema.org/blob/1.3.1/guides/Dataset.md#identifier>
* \[Signposting\]: <https://signposting.org/>
* \[IANA link relations\]: <https://www.iana.org/assignments/link-relations/>
* \[RFC8574\]: <https://www.iana.org/go/rfc8574>
* \[citation styles\]: <https://citationstyles.org/>
* \[GeoSPARQL ontology\]: <https://opengeospatial.github.io/ogc-geosparql/geosparql11/>

* \[Action\]: <http://schema.org/Action>
* \[ActionStatusType\]: <http://schema.org/ActionStatusType>
* \[ActiveActionStatus\]: <http://schema.org/ActiveActionStatus>
* \[Class\]: <http://schema.org/Class>
* \[CompletedActionStatus\]: <http://schema.org/CompletedActionStatus>
* \[ComputerLanguage\]: <http://schema.org/ComputerLanguage>
* \[CreateAction\]: <http://schema.org/CreateAction>
* \[CreativeWork\]: <http://schema.org/CreativeWork>
* \[DataDownload\]: <http://schema.org/DataDownload>
* \[DateTime\]: <http://schema.org/DateTime>
* \[Dataset\]: <http://schema.org/Dataset>
* \[FailedActionStatus\]: <http://schema.org/FailedActionStatus>
* \[File\]: <http://schema.org/MediaObject>
* \[Journal\]: <http://schema.org/Periodical>
* \[GeoCoordinates\]: <http://schema.org/GeoCoordinates>
* \[ImageObject\]: <http://schema.org/ImageObject>
* \[MediaObject\]: <http://schema.org/MediaObject>
* \[Organization\]: <http://schema.org/Organization>
* \[Person\]: <http://schema.org/Person>
* \[PotentialActionStatus\]: <http://schema.org/PotentialActionStatus>
* \[Place\]: <http://schema.org/Place>
* \[Product\]: <http://schema.org/Product>
* \[Property\]: <http://schema.org/Property>
* \[PropertyValue\]: <http://schema.org/PropertyValue>
* \[ScholarlyArticle\]: <http://schema.org/ScholarlyArticle>
* \[SoftwareApplication\]: <http://schema.org/SoftwareApplication>
* \[SoftwareSourceCode\]: <http://schema.org/SoftwareSourceCode>
* \[Thing\]: <http://schema.org/Thing>
* \[UpdateAction\]: <http://schema.org/UpdateAction>
* \[WebSite\]: <http://schema.org/WebSite>
* \[Geometry\]: <https://opengeospatial.github.io/ogc-geosparql/geosparql11/geo.html#Geometry>
* \[asWKT\]: <https://opengeospatial.github.io/ogc-geosparql/geosparql11/geo.html#asWKT>

* \[about\]: <http://schema.org/about>
* \[accountablePerson\]: <http://schema.org/accountablePerson>
* \[actionStatus\]: <http://schema.org/actionStatus>
* \[additionalType\]: <http://schema.org/additionalType>
* \[affiliation\]: <http://schema.org/affiliation>
* \[agent\]: <http://schema.org/agent>
* \[alternateName\]: <http://schema.org/alternateName>
* \[author\]: <http://schema.org/author>
* \[abstract\]: <http://schema.org/abstract>
* \[citation\]: <http://schema.org/citation>
* \[contentUrl\]: <http://schema.org/contentUrl>
* \[contact\]: <http://schema.org/accountablePerson>
* \[contactPoint\]: <http://schema.org/contactPoint>
* \[contactType\]: <http://schema.org/contactType>
* \[contentLocation\]: <http://schema.org/contentLocation>
* \[contentSize\]: <http://schema.org/contentSize>
* \[contributor\]: <http://schema.org/contributor>
* \[copyrightHolder\]: <http://schema.org/copyrightHolder>
* \[creator\]: <http://schema.org/creator>
* \[dateCreated\]: <http://schema.org/dateCreated>
* \[datePublished\]: <http://schema.org/datePublished>
* \[defaultValue\]: <http://schema.org/defaultValue>
* \[description\]: <http://schema.org/description>
* \[distribution\]: <http://schema.org/distribution>
* \[email\]: <http://schema.org/email>
* \[encodingFormat\]: <http://schema.org/encodingFormat>
* \[endTime\]: <http://schema.org/endTime>
* \[error\]: <http://schema.org/error>
* \[event\]: <http://schema.org/event>
* \[familyName\]: <http://schema.org/familyName>
* \[funder\]: <http://schema.org/funder>
* \[geo\]: <http://schema.org/geo>
* \[givenName\]: <http://schema.org/givenName>
* \[hasPart\]: <http://schema.org/hasPart>
* \[identifier\]: <http://schema.org/identifier>
* \[IndividualProduct\]: <http://schema.org/IndividualProduct>
* \[instrument\]: <http://schema.org/instrument>
* \[keywords\]: <http://schema.org/keywords>
* \[latitude\]: <http://schema.org/latitude>
* \[license\]: <http://schema.org/license>
* \[localPath\]: <https://w3id.org/ro/terms#localPath>
* \[longitude\]: <http://schema.org/longitude>
* \[mainEntity\]: <http://schema.org/mainEntity>
* \[memberOf\]: <http://schema.org/memberOf>
* \[name\]: <http://schema.org/name>
* \[object\]: <http://schema.org/object>
* \[phone\]: <http://schema.org/phone>
* \[programmingLanguage\]: <http://schema.org/programmingLanguage>
* \[publisher\]: <http://schema.org/publisher>
* \[relatedItem\]: <http://schema.org/relatedItem>
* \[result\]: <http://schema.org/result>
* \[sameAs\]: <http://schema.org/sameAs>
* \[spatialCoverage\]: <http://schema.org/spatialCoverage>
* \[sdLicense\]: <http://schema.org/sdLicense>
* \[sdPublisher\]: <http://schema.org/sdPublisher>
* \[sdDatePublished\]: <http://schema.org/sdDatePublished>
* \[startTime\]: <http://schema.org/startTime>
* \[temporalCoverage\]: <http://schema.org/temporalCoverage>
* \[thumbnail\]: <http://schema.org/thumbnail>
* \[translationOf\]: <http://schema.org/translationOf>
* \[translator\]: <http://schema.org/translator>
* \[url\]: <http://schema.org/url>
* \[valueRequired\]: <http://schema.org/valueRequired>
* \[version\]: <http://schema.org/version>

* \[creativeWorkStatus\]: <http://schema.org/creativeWorkStatus>
* \[funding\]: <https://github.com/schemaorg/schemaorg/pull/2618>
* \[isBasedOn\]: <http://schema.org/isBasedOn>
* \[maintainer\]: <http://schema.org/maintainer>
* \[producer\]: <http://schema.org/producer>
* \[runtimePlatform\]: <http://schema.org/runtimePlatform>
* \[softwareRequirements\]: <http://schema.org/softwareRequirements>
* \[targetProduct\]: <http://schema.org/targetProduct>
* \[conditionsOfAccess\]: <http://schema.org/conditionsOfAccess>
* \[dateModified\]: <http://schema.org/dateModified>
* \[image\]: <http://schema.org/image>
* \[DefinedTerm\]: <http://schema.org/DefinedTerm>
* \[DefinedTermSet\]: <http://schema.org/DefinedTermSet>
* \[Grant\]: <http://schema.org/Grant>
* \[Project\]: <http://schema.org/Project>
* \[subjectOf\]: <http://schema.org/subjectOf>
* \[mainEntityOfPage\]: <http://schema.org/mainEntityOfPage>
* \[WebPage\]: <http://schema.org/WebPage>
* \[WebPageElement\]: <http://schema.org/WebPageElement>

* \[ComputationalWorkflow 0.1\]: <https://bioschemas.org/types/ComputationalWorkflow/0.1-DRAFT-2020_07_21>
* \[ComputationalWorkflow 0.1 input\]: <https://bioschemas.org/types/ComputationalWorkflow/0.1-DRAFT-2020_07_21#input>
* \[ComputationalWorkflow 0.1 output\]: <https://bioschemas.org/types/ComputationalWorkflow/0.1-DRAFT-2020_07_21#output>
* \[FormalParameter 0.1\]: <https://bioschemas.org/types/FormalParameter/0.1-DRAFT-2020_07_21>
* \[ComputationalWorkflow profile 0.5\]: <https://bioschemas.org/profiles/ComputationalWorkflow/0.5-DRAFT-2020_07_21>
* \[FormalParameter profile 0.1\]: <https://bioschemas.org/profiles/FormalParameter/0.1-DRAFT-2020_07_21>

* \[ComputationalWorkflow 1.0\]: <https://bioschemas.org/types/ComputationalWorkflow/1.0-RELEASE>
* \[ComputationalWorkflow 1.0 input\]: <https://bioschemas.org/types/ComputationalWorkflow/1.0-RELEASE#input>
* \[ComputationalWorkflow 1.0 output\]: <https://bioschemas.org/types/ComputationalWorkflow/1.0-RELEASE#output>
* \[FormalParameter 1.0\]: <https://bioschemas.org/types/FormalParameter/1.0-RELEASE>
* \[ComputationalWorkflow profile 1.0\]: <https://bioschemas.org/profiles/ComputationalWorkflow/1.0-RELEASE>
* \[FormalParameter profile 1.0\]: <https://bioschemas.org/profiles/FormalParameter/1.0-RELEASE>

* \[RFC 2119\]: <https://tools.ietf.org/html/rfc2119>
* \[RFC 3986\]: <https://tools.ietf.org/html/rfc3986>
* \[RFC 6838\]: <https://tools.ietf.org/html/rfc6838>
* \[RFC 7159\]: <https://tools.ietf.org/html/rfc7159>
* \[RFC 8493\]: <https://tools.ietf.org/html/rfc8493>

* \[Profiles Vocabulary\]: <https://www.w3.org/TR/2019/NOTE-dx-prof-20191218/>
* \[Profile\]: <https://www.w3.org/TR/dx-prof/#Class:Profile>
